--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body.inverted .cursor{
 <body>
   <canvas id="scene" aria-hidden="true"></canvas>
   <div class="spot" id="spot"></div>
-  <div class="headline" id="headline" style="">The point is that everything begins with a $POINT.</div>
+  <div class="headline" id="headline">The point is that everything begins with a $POINT.</div>
   <div class="cursor" id="cursor"></div>
 
   <script>
