last commit pls

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@ body.inverted .cursor{
   background: #ffffff;
   mix-blend-mode: normal;
 }
+
+@media (max-width: 470px) {
+  .headline{
+    font-size: 16.5px !important;
+  }
+}
+
   </style>
 </head>
 <body>
