--- a/index.html
+++ b/index.html
@@ -222,15 +222,159 @@ body.inverted .top-bar h3{ color:#fff; border-color:#fff; }
   .top-bar h3{ font-size: 11.5px; }
 }
 
+@media (max-width: 1024px){
+  .top-bar{
+    gap: 10px;
+  }
+  .btn-link{
+    font-size: 14px;
+    padding: 8px 16px;
+    letter-spacing: 0.05em;
+    border-width: 2px;
+  }
+  .top-bar h3{
+    font-size: 14px;
+    padding: 6px 14px;
+    letter-spacing: 0.09em;
+    border-width: 2px;
+  }
+  .headline{
+    font-size: 20px; /* перекрывает clamp */
+  }
+}
 
+/* Узкие планшеты / большие телефоны (до 820px) */
+@media (max-width: 820px){
+  .top-bar{
+    gap: 8px;
+  }
+  .btn-link{
+    font-size: 13px;
+    padding: 7px 14px;
+    letter-spacing: 0.05em;
+    border-width: 2px;
+  }
+  .top-bar h3{
+    font-size: 13px;
+    padding: 6px 12px;
+    letter-spacing: 0.1em;
+    border-width: 2px;
+  }
+  .headline{
+    font-size: 18px;
+  }
+  .cursor{
+    width: 8px; height: 8px;
+  }
+}
+
+/* Телефоны (до 600px) — основное сжатие для iPhone 14 Pro Max */
+@media (max-width: 600px){
+  /* симметричные отступы с учётом safe-area */
+  .top-bar{
+    gap: 8px;
+    padding-top: max(10px, env(safe-area-inset-top));
+    padding-left: calc(12px + env(safe-area-inset-left));
+    padding-right: calc(12px + env(safe-area-inset-right));
+  }
+
+  .btn-link{
+    font-size: 12px;
+    padding: 6px 12px;
+    letter-spacing: 0.055em;
+    border-width: 1.5px;
+  }
+
+  .top-bar h3{
+    font-size: 12px;
+    padding: 5px 10px;
+    letter-spacing: 0.11em;
+    border-width: 1.5px;
+  }
+
+  .headline{
+    font-size: 16px !important;   /* жёстко меньше для телефонов */
+  }
+
+  /* Чуть меньше центральная точка, чтобы композиция смотрелась легче */
+  .spot{
+    width: min(6vmin, 48px);
+    height: min(6vmin, 48px);
+  }
+
+  /* Кнопки не ломают сетку и ужимаются с троеточием при нехватке места */
+  .btn-link{ max-width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+}
+
+/* Маленькие телефоны (до 420px) — компактный режим */
+@media (max-width: 420px){
+  .top-bar{
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "left  right"
+      "ca    ca";
+    row-gap: 8px;
+  }
+
+  .btn-link{
+    font-size: 11.5px;
+    padding: 6px 10px;
+    border-width: 1.5px;
+  }
+
+  .top-bar h3{
+    font-size: 11.5px;
+    padding: 5px 10px;
+    border-width: 1.5px;
+    justify-self: center;
+  }
+
+  .headline{
+    font-size: 14.5px !important;
+  }
+
+  .cursor{
+    width: 7px; height: 7px;
+  }
+}
+
+@media (max-width: 390px){
+.top-bar h3.caa{
+    font-size: 8px !important;  /* был конфликт специфичности — теперь перебиваем точно */
+    padding: 4px 8px;
+    letter-spacing: .11em;
+  }
+}
+
+/* Совсем узкие (до 360px) — последнее уменьшение */
+@media (max-width: 360px){
+  .btn-link{
+    font-size: 11px;
+    padding: 5px 9px;
+  }
+  .top-bar h3{
+    font-size: 11px;
+    padding: 4px 9px;
+  }
+  .headline{
+    font-size: 13.5px !important;
+  }
+}
+
+.caa{
+     font-family: "Montserrat", sans-serif !important;
+  font-optical-sizing: auto !important;
+  font-weight: 300 !important;
+  font-style: normal !important;
+}
   </style>
 </head>
 <body>
   <canvas id="scene" aria-hidden="true"></canvas>
 <header class="top-bar">
-  <a href="https://dexscreener.com/solana/coming soon" target="_blank" class="btn-link left">Dexscreener</a>
+  <a href="https://dexscreener.com/solana/coming soon" target="_blank" class="btn-link left">DEX</a>
   <h3 class="caa">CA: 3FeFKTFQk2pEWwqax7vjxz6jSbFUpPASnACRSzDQcSRQ</h3>
-  <a href="https://x.com/" target="_blank" class="btn-link right">Twitter</a>
+  <a href="https://x.com/i/communities/1965347857596055804" target="_blank" class="btn-link right">X</a>
 </header>
   <div class="spot" id="spot"></div>
   <div class="headline" id="headline">The point is that everything begins with a $POINT.</div>
