--- a/index.html
+++ b/index.html
@@ -369,6 +369,14 @@ body.inverted .top-bar h3{ color:#fff; border-color:#fff; }
 }
   </style>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R24XBV159E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R24XBV159E');
+</script>
 <body>
   <canvas id="scene" aria-hidden="true"></canvas>
 <header class="top-bar">
